--- a/coding.html
+++ b/coding.html
@@ -23,7 +23,7 @@
       <img src="images/pixel-art.png" alt="" class="coding-images" /></a>
      
      <a href="https://github.com/andreamaciasr/2048">
-      <h3>2048</h3>
+      <h3 class="miffy">2048</h3>
       <img src="images/2048.png" alt="" class="coding-images" />
      </a>
  
