--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
       <div class="row center-align" style="flex: 1">
         <div class="col s4">
           <img src="images/art.png" alt="" class="responsive-img" />
-          <a href="art.html" class="btn">art</a>
+          <a href="art.html" class="miffy-button">art</a>
         </div>
         <div class="col s4">
-          <img src="images/coding.png" alt="" class="responsive-img" />
-          <a href="coding.html" class="btn">coding</a>
+          <div >
+            <img src="images/coding.png" alt="" class="responsive-img" />
+            <a href="coding.html" class="miffy-button">coding</a>
+          </div>
+
         </div>
         <div class="col s4">
           <img src="images/about-me.png" alt="" class="responsive-img" />
-          <a href="aboutMe.html" class="btn">about me</a>
+          <a href="aboutMe.html" class="miffy-button">about me</a>
         </div>
       </div>
     </div>
