added dog and images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Andrea</title>
   </head>
   <body>
+    <nav class="index-nav"><img  id="dog" src="images/dog.png" alt=""></nav>
 
     <div class="valign-wrapper" style="height: 100vh">
       <div class="row center-align" style="flex: 1">
