--- a/art.html
+++ b/art.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>andrea</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    type="text/css"
-    rel="stylesheet"
-    href="materialize/css/materialize.min.css"
-    media="screen,projection"
-  />
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="row">
-        <a href="index.html"><div class="col s12 m4 l2">andrea macías</div></a>
-      </div>
-    art
+      type="text/css"
+      rel="stylesheet"
+      href="materialize/css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>andrea</title>
+  </head>
+  <body>
+    <div class="row"></div>
+    <div class="row center-align">
+      <img src="images/the-best.png" alt="" class="coding-images" />
+
+      <img src="images/heart.png" alt="" class="coding-images" />
+
+      <img src="images/castle.png" alt="" class="coding-images" />
+
+      <img src="images/wip.png" alt="" class="coding-images" />
+    </div>
+
     <script type="text/javascript" src="materialize/js/materialize.js"></script>
-</body>
+  </body>
 </html>
