--- a/coding.html
+++ b/coding.html
@@ -13,9 +13,20 @@
     <title>andrea</title>
   </head>
   <body>
-    <div class="row">
+    <!-- <div class="row">
       <a href="index.html"><div class="col s12 m4 l2">home</div></a>
-    </div>
+    </div> -->
+
+    <nav>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo right" id="dog-nav"><img src="images/dog.png"/></a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li class="nav-link"><a href="aboutMe.html">about me</a></li>
+          <li class="nav-link"><a href="art.html">art</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="row center-align">
      
       <a href="https://github.com/andreamaciasr/pixel-art"> 
@@ -35,3 +46,15 @@
     <script type="text/javascript" src="materialize/js/materialize.js"></script>
   </body>
 </html>
+
+<!-- 
+.nav-link {
+  color: #000000; 
+  font-size: 2vh;
+}
+
+.nav-link:hover {
+  color: #ff5722; /* Change text color on hover */
+  background-color: #e9f323;
+ 
+} -->
