--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,17 +17,23 @@
       <a href="index.html"><div class="col s12 m4 l2">home</div></a>
     </div>
     <div class="row">
-        <div class="col s4" >
-            <p>hi, i'm andrea</p>
-            <p>
-              I was born and raised in Mexico. I'm an Isha Yoga volunteer and a Recurse
-              Center alumni. I'm working towards becoming a SWE, and I also like to
-              doodle on my free time
-            </p>
+      <div class="col s5 offset-s1">
+        <div class="bio">
+          <p>hi, i'm <span id="name">andrea</span></p>
+          <p>
+            I was born and raised in Mexico. I'm an <a href="https://isha.sadhguru.org/us/en">Isha Yoga</a> volunteer and a
+            <a href="https://www.recurse.com/">Recurse Center</a> alumni. I'm working towards becoming a SWE, and I
+            also like to doodle on my free time
+          </p>
+          <span class="find-me">Find me On:</span>
+          <ul class="links">
+            <li><a href="https://www.linkedin.com/in/andrea-macrz/"><span class="bullet-point">*</span> Linkedin</a></li>
+            <li><a href="https://github.com/andreamaciasr"><span class="bullet-point">*</span> Github</a></li>
+          </ul>
+          </p>
         </div>
+      </div>
     </div>
-
-
 
     <script type="text/javascript" src="materialize/js/materialize.js"></script>
   </body>
