added nav bars and minor adjustments

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,19 +13,26 @@
     <title>Andrea</title>
   </head>
   <body>
-    <div class="row">
-      <a href="index.html"><div class="col s12 m4 l2">home</div></a>
-    </div>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo right" id="dog-nav"><img src="images/dog.png"/></a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li class="nav-link"><a href="art.html">art</a></li>
+          <li class="nav-link"><a href="coding.html">coding</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="row">
       <div class="col s5 offset-s1">
         <div class="bio">
           <p>hi, i'm <span id="name">andrea</span></p>
           <p>
             I was born and raised in Mexico. I'm an <a href="https://isha.sadhguru.org/us/en">Isha Yoga</a> volunteer and a
-            <a href="https://www.recurse.com/">Recurse Center</a> alumni. I'm working towards becoming a SWE, and I
-            also like to doodle on my free time
+            <a href="https://www.recurse.com/">Recurse Center</a> alumna. I'm working towards becoming a SWE, and I
+            also like to doodle in my free time.
           </p>
-          <span class="find-me">Find me On:</span>
+          <span class="find-me">Find me on:</span>
           <ul class="links">
             <li><a href="https://www.linkedin.com/in/andrea-macrz/"><span class="bullet-point">*</span> Linkedin</a></li>
             <li><a href="https://github.com/andreamaciasr"><span class="bullet-point">*</span> Github</a></li>
