--- a/art.html
+++ b/art.html
@@ -13,6 +13,16 @@
     <title>andrea</title>
   </head>
   <body>
+
+    <nav>
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo right" id="dog-nav"><img src="images/dog.png"/></a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li class="nav-link"><a href="aboutMe.html">about me</a></li>
+          <li class="nav-link"><a href="coding.html">coding</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="row"></div>
     <div class="row center-align">
       <img src="images/the-best.png" alt="" class="coding-images" />
